# RAG-EDU

./: .gitignore  CELL_1A_QUICK_INSTALL.py  CELL_1B_FIX_AND_VERIFY.py  CELL_1_SETUP_AND_INSTALL.py  CELL_2_NOTEBOOK_DOWNLOAD_MODELS.py  CELL_3_LOAD_ALL_MODELS.py  CELL_4_ULTIMATE_COMPLETE_METADATA.py  CELL_5_HYBRID_RETRIEVAL_ENHANCED.py  CELL_6_LLM_SYNTHESIS_WITH_PRUNING.py  CELL_7_EVALUATION_FRAMEWORK.py  CELL_8_END_TO_END_PIPELINE.py  CELL_9_VISUALIZATION_MONITORING.py  README.md  api_server.py  app_settings.py  cli.py  config.py  download_models.py  llm_backends.py  local_app_settings.example.json  main.py  modeling_semviqa_qatc_standalone.py  pyproject.toml  rag_quality_metrics.py  rechunk_data.bat  rechunk_runtime.py  reload_embedding_data.bat  requirements.txt  run.bat  run_api.bat  run_random_faq_system_test.py  run_test.bat  runtime_bootstrap.py  runtime_service.py  setup_env.bat  ui_test_logging.py
data/: Data250.xlsx
model_assets/: __init__.py  registry.py
web/: index.html
